# BitwiseCommandLineToolkit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BitwiseOperations/: bitwise_operations.cpp  bitwise_operations.h
CommandParser/: command_parser.cpp  command_parser.h
core/: utils.cpp  utils.h
